[project]
name = "runtime-manager"
version = "0.1.0"
description = "Contract-first runtime manager for OpenClaw containers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
